--- a/globalStyle.css
+++ b/globalStyle.css
@@ -51,6 +51,7 @@ box-shadow:10px 5px 5px #957dad;
     margin-top: 200px;
 }
 .title{
+    
     padding-bottom: 10px;
     color:#957dad;
 }
@@ -177,6 +178,7 @@ p{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     padding-left: 4%;
+    row-gap: 80px;
     background-color: #E0BBE4;
     width: 100%;
     height: 50%;
@@ -201,7 +203,7 @@ p{
     border: 1px solid #957dad;
     /* width: 30%; */
     margin-top: 40px;
-    height: 200px;
+    height: 250px;
 }
 
 .input:invalid {
